css/main.css
.main-photo {
    background:
            linear-gradient(
                    rgba(0, 0, 0, 0.35),
                    rgba(100, 0, 0, 0.35)
            ),

            url(../images/main-photo.jpg);

    background-size: cover;

    min-height: 690px;
    margin-top: 50px;
    padding-top: 170px;
    padding-bottom: 100px;
}

nav {
    -webkit-box-shadow: 0 4px 4px -2px #000000;
    -moz-box-shadow: 0 4px 4px -2px #000000;
    box-shadow: 0 4px 4px -2px #000000;
}

.companies {
    margin-top: 20px;
    margin-bottom: 20px;

    text-align: center;
}

.companies .frame {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.companies img {
    max-width: 90%;
    height: auto;

    opacity: 0.75;
}

footer {
    color: white;
    background-color: rgba(0, 0, 0, 0.90);
}

footer div.website-info {
    margin: 0;

    padding-top: 50px;
    padding-bottom: 50px;
}

footer div.website-info ul a {
    color: white !important;
}

footer p.copyright {
    color: white;
    text-align: center;
    background-color: black;

    margin: 0;
    padding-top: 25px;
    padding-bottom: 25px;
}

div.gray-bg {
    background-color: #f3f3f3;
}


div.faq h2 {
    font-size: 300%;
}

div.faq h3 {
    margin-top: 45px;
}

div.faq p {
    margin-bottom: 20px;
}


div.feature {
    padding: 10px;

    text-align: center;
    margin-bottom: 60px;
}

div.feature img {
    max-width: 120px;
}

div.feature p {
    margin-top: 15px;
    font-size: 150%;
}


div.social-pages div.social-page {
    margin-top: 20px;
    margin-bottom: 50px;

    text-align: center;
}

div.social-pages div.social-page img {
    max-width: 80px;
    filter: invert(100%);
}

div.social-pages div.social-page h3 {
    margin-top: 40px;
    margin-bottom: 10px;
}



div.blue-image-bg {
    background:
            linear-gradient(
                    rgba(15, 20, 170, 0.75),
                    rgba(15, 20, 170, 0.75)
            ),

            url(../images/main-photo.jpg);
    background-size: cover;


    color: white !important;
}


div.section-item {
    padding-top: 90px;
    padding-bottom: 90px;
}

